k8s.yml
apiVersion: v1
kind: Namespace
metadata:
  name: t37
---
apiVersion: v1
kind: Service
metadata:
  name: t37-web-svc
  namespace: t37
spec:
  ports:
    - name: http
      port: 8443
      targetPort: 8443
  selector:
    app: t37-web-svc
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: t37-web-deb
  namespace: t37
spec:
  selector:
    matchLabels:
      app: t37-web-svc
  template:
    metadata:
      labels:
        app: t37-web-svc
    spec:
      imagePullSecrets:
        - name: ghreg
      containers:
        - image: ghcr.io/manimaul/t37.org:06-16-26_r0
          imagePullPolicy: Always
          name: t37-web-svc
#          env:
#            - name: TLS_DIR
#              value: "none"
          ports:
            - containerPort: 8443
              name: http
          resources:
            requests:
              cpu: 100m
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: t37ingress
  namespace: t37
  annotations:
    haproxy.org/server-ssl: "true"
    haproxy.org/server-verify: "none"
spec:
  ingressClassName: haproxy
  rules:
    - host: tartan37.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: t37-web-svc
                port:
                  number: 8443
  tls:
    - hosts:
        - tartan37.org
      secretName: t37-cert
---
